styles/globals.css
/* Google fonts

font-family: 'Fira Mono', monospace;
font-family: 'Inter', sans-serif;
font-family: 'Playfair Display', serif;
*/

.light {
  --primary: #3eb489;
  --secondary: #2b694d;
  --accent: #8cb6bb;

  --text: #34373e;
  --text-shadow: 0 0 1px #fff;
  --font-family-heading: "Inter", sans-serif;
  --font-family-heading-accent: "Playfair Display", serif;

  --body: #fafafa;
  --grey: #454545;
  --lightgrey: #8f8182;
  --faint: rgba(0, 0, 0, 0.1);
  --caption: #8f8182;
  /* This color should be eye-catching but not harsh. It can be liberally applied to your layout as its main identity.  */

  --success: #63aa64;
  --warning: #e09a2c;
  --error: #f44336;
  --info: #2196f3;

  --border: 1px solid var(--faint);
  --border-radius: 10px;
  --padding: 1rem 3rem;
}

.dark {
  --primary: #86dabb;
  --secondary: #6fb998;
  --accent: #b7dce0;

  --text: #fafafa;
  --text-shadow: 0 0 1px #000;
  --font-family-heading: "Inter", sans-serif;
  --font-family-heading-accent: "Playfair Display", serif;

  --body: #34373e;
  --grey: #b3b3b3;
  --lightgrey: #8f8182;
  --faint: rgba(0, 0, 0, 0.1);
  --caption: #8f8182;

  --success: #63aa64;
  --warning: #e09a2c;
  --error: #f44336;
  --info: #2196f3;

  --border: 1px solid var(--faint);
  --border-radius: 10px;
  --padding: 1rem 3rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  transition: ease-in-out 0.2s;
}

html,
body {
  height: 100%;
  width: 100%;
}

html {
  background-color: var(--body);
  color: var(--text);
  font-size: 1rem;
  line-height: 1.6;
  font-family: "Inter", sans-serif;
}

body {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

header {
  top: 0;
  width: 100%;
  position: absolute;
  display: flex;
  justify-content: center;
  padding-bottom: 2rem;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 2rem;

  @media screen and (max-width: 750px) {
    padding: 0 2rem;
  }

  @media screen and (max-width: 1024px) {
    padding: 0rem 4rem;
  }

  @media screen and (max-width: 1280px) {
    padding: 0rem 5rem;
  }
}

a {
  text-decoration: none;
  color: var(--secondary);
  font-weight: 600;
}

a:hover {
  color: var(--dark-shades);
  transition: ease-in-out 0.2s;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-primary);
}

h4,
h5 {
  font-weight: 600;
  font-size: 1.5rem;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 0rem;
  font-family: "Coolvetica";
  text-align: center;

  @media screen and (max-width: 750px) {
    font-size: 2rem;
  }
}

h2 {
  padding: 0.25em;
  font-size: 2.5rem;
  margin-top: 0;

  @media screen and (max-width: 750px) {
    font-size: 2rem;
  }
}

h3 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

p {
  margin-bottom: 1rem;

  @media screen and (max-width: 768px) {
    padding: 0 2.5rem;
  }
}

li {
  @media screen and (max-width: 450px) {
    padding: 0 2.5rem;
  }

  @media screen and (max-width: 768px) {
    padding: 0 2.5rem;
  }

  @media screen and (max-width: 1024px) {
    padding: 0 2.5rem;
  }

  @media screen and (max-width: 1280px) {
    padding: 0 2.5rem;
  }
}

li {
  margin-bottom: 0.5rem;
}

p,
li {
  opacity: 0.9;
}

img,
image {
  border-radius: 15px;
}

.head3 {
  margin-left: 10px;
  list-style-type: circle;
}
.head4 {
  margin-left: 20px;
  list-style-type: square;
}

kbd,
.kbd {
  display: inline-block;
  padding: 0.17em 0.6em 0.17em 0.4em;
  margin: 0 0.2em;
  position: relative;
  top: -0.2em;

  color: #333;
  font: normal 0.8em/1 sans-serif;
  text-decoration: none;
  box-shadow: inset 0 -0.2em 0.12em -0.15em rgba(255, 255, 255, 0.7);
  cursor: default;
  border-radius: 0.3em;

  background: -ms-radial-gradient(top, ellipse cover, #ddd 0%, white 100%);
  background: radial-gradient(ellipse at top right, #ddd 0%, white 100%);
}

kbd::before,
.kbd::before,
kbd::after,
.kbd::after {
  content: "";
  position: absolute;
  left: -0.17em;
  right: -0.17em;
  top: 0.1em;
  bottom: -0.4em;
  border-radius: 0.4em;
}

/*white highlight*/
kbd::before,
.kbd::before {
  z-index: -1;

  border: 1px solid gray;
  background: #a8a8a8;
  background: radial-gradient(
    circle 3em at -1.7em 0,
    white 0%,
    white 70%,
    rgba(255, 255, 255, 0) 80%
  );
}

kbd::after,
.kbd::after {
  z-index: -2;

  background: #a8a8a8;
  background: radial-gradient(
    ellipse 1em 1.7em at top right,
    #aaa 0%,
    #aaa 70%,
    #ccc 100%
  );
}

.kbd-down {
  top: 0em;
  box-shadow: inset 0 -0.2em 0.3em -0.1em rgba(200, 200, 200, 0.5);
}
.kbd-down::before,
.kbd-down::after {
  top: -0.1em;
  bottom: -0.2em;
}
.kbd-down::before {
  box-shadow: inset 0px 1px 6px 0px rgba(0, 0, 0, 1);
}

.head2 {
  margin-left: 10px;
  list-style-type: disc;
}
.head3 {
  margin-left: 30px;
  list-style-type: circle;
}

